--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.removeGutter {
+  --bs-gutter-x: 0!important;
+  --bs-gutter-y: 0!important;
+}
